# NASDAQ-ITCH-5.0-Feed-Handler

./: .clang-format  .gitignore  CMakeLists.txt  README.md
bench/: bench_main.cpp
include/book/: order.hpp  order_book.hpp
include/itch/: messages.hpp  parser.hpp
include/memory/: slab_pool.hpp
include/net/: moldudp64.hpp  udp_multicast.hpp
include/util/: cpu_affinity.hpp  ring_buffer.hpp  stats.hpp
results/: bench_no_affinity.txt
scripts/: bench_compare.sh  nic_tune.sh  perf_stat.sh
src/: main.cpp
src/book/: order_book.cpp
src/net/: udp_multicast.cpp
tests/: validate_book.cpp
